[workspace]
members = ["leptos_form"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]

[workspace.dependencies]
bigdecimal = "~0.4"
chrono = { version = "0", features = ["std"] }
convert_case = "~0.6"
darling = "0.20"
derive_more = "~0.99"
derivative = "2"
inner = "0"
itertools = "~0.11"
leptos = { version = "~0.5" }
leptos_router = "~0.5"
num-bigint = { version = "~0.4", default-features = false }
paste = "~1"
prettyplease = "0.2"
pretty_assertions = "1.4.0"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive" ]}
syn = { version = "2", features = ["extra-traits", "full", "parsing"] }
tracing = "0"
thiserror = "1"
typed-builder = "~0.16"
uuid = { version = "1", features = ["serde"] }
wasm-bindgen = "~0.2"
web-sys = "~0.3"
