[package]
name = "leptos_form_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version = "1.75.0"

[dependencies]
cfg-if.workspace = true
derivative.workspace = true
derive_more.workspace = true
leptos.workspace = true
num-traits.workspace = true
paste.workspace = true
thiserror.workspace = true
typed-builder.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
