[package]
name = "leptos_form_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derivative.workspace = true
derive_more.workspace = true
leptos.workspace = true
paste.workspace = true
thiserror.workspace = true
typed-builder.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

bigdecimal = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
bigdecimal = ["dep:bigdecimal"]
chrono = ["dep:chrono"]
num-bigint = ["dep:num-bigint"]
uuid = ["dep:uuid"]
