[package]
name = "leptos_form_core"
description = "Derive forms from structs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
derivative.workspace = true
derive_more.workspace = true
indexmap.workspace = true
leptos.workspace = true
paste.workspace = true
thiserror.workspace = true
typed-builder.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

bigdecimal = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[features]
bigdecimal = ["dep:bigdecimal"]
chrono = ["dep:chrono"]
num-bigint = ["dep:num-bigint"]
serde = ["dep:serde"]
uuid = ["dep:uuid"]

cache-local-storage = [
  "web-sys/Storage",
]
cache-serde_json = [
  "serde",
  "serde_json",
]
