[package]
name = "leptos-form"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
leptos.workspace = true
leptos-form-core.path = "../core"
leptos-form-proc-macros.path = "../proc-macros"
leptos_router.workspace = true

[features]
chrono = ["leptos-form-core/chrono"]
uuid = ["leptos-form-core/uuid"]
