[package]
name = "leptos_form"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
leptos.workspace = true
leptos_form_core.path = "../core"
leptos_form_proc_macros.path = "../proc_macros"
leptos_router.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
serde.workspace = true

[features]
bigdecimal = ["leptos_form_core/bigdecimal"]
chrono = ["leptos_form_core/chrono"]
num-bigint = ["leptos_form_core/num-bigint"]
uuid = ["leptos_form_core/uuid"]
