[package]
name = "leptos_form"
description = "Derive forms from structs."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
leptos.workspace = true
leptos_form_core.workspace = true
leptos_form_proc_macros.workspace = true
leptos_router.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
serde.workspace = true
typed-builder.workspace = true
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
rustc_version = "0.4.0"

[features]
bigdecimal = ["leptos_form_core/bigdecimal"]
chrono = ["leptos_form_core/chrono"]
num-bigint = ["leptos_form_core/num-bigint"]
uuid = ["leptos_form_core/uuid"]
