[package]
name = "leptos_form_proc_macros"
description = "Proc macro used by leptos_form."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
leptos_form_proc_macros_core.workspace = true

[lib]
proc-macro = true
