[package]
name = "leptos-form-proc-macros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
convert_case.workspace = true
derive_more.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
dissimilar = "1.0.4"
prettyplease = "0.2"
