[package]
name = "leptos-form-proc-macros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
convert_case.workspace = true
darling.workspace = true
derive_more.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
prettyplease.workspace = true
pretty_assertions.workspace = true
