[package]
name = "leptos_form_proc_macros_core"
description = "Core proc macro utilities used by leptos_form."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
convert_case.workspace = true
darling.workspace = true
derive_more.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
prettyplease.workspace = true
pretty_assertions.workspace = true
